--- a/index.html
+++ b/index.html
@@ -1,1 +1,77 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Salim | AI Automation Expert</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background: #0f172a;
+            color: white;
+            text-align: center;
+        }
+        .hero {
+            padding: 80px 20px;
+            background: linear-gradient(135deg,#1e293b,#0f172a);
+        }
+        h1 {
+            font-size: 42px;
+        }
+        .btn {
+            display: inline-block;
+            padding: 12px 25px;
+            margin-top: 20px;
+            background: #00ffcc;
+            color: black;
+            text-decoration: none;
+            border-radius: 25px;
+            font-weight: bold;
+        }
+        .section {
+            padding: 60px 20px;
+        }
+        .card {
+            background: #1e293b;
+            margin: 15px auto;
+            padding: 20px;
+            border-radius: 10px;
+            max-width: 400px;
+        }
+        footer {
+            padding: 20px;
+            background: #111827;
+            font-size: 14px;
+            opacity: 0.6;
+        }
+    </style>
+</head>
+<body>
 
+<div class="hero">
+    <h1>I Build AI Automation Systems</h1>
+    <p>I help creators & businesses automate content using AI.</p>
+    <a class="btn" href="https://wa.me/212675905674">Hire Me</a>
+</div>
+
+<div class="section">
+    <h2>My Services</h2>
+
+    <div class="card">
+        <h3>AI Content Automation</h3>
+        <p>Automatic content generation & posting system.</p>
+    </div>
+
+    <div class="card">
+        <h3>Prompt Engineering</h3>
+        <p>High converting prompts for marketing.</p>
+    </div>
+
+</div>
+
+<footer>
+    © 2026 Salim | AI Automation Expert
+</footer>
+
+</body>
+</html>
