--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 <body>
 
 <div class="hero">
-    <h1>I Build AI Automation Systems</h1>
+    <h1>I Help Businesses Make Money Using AI Automation</h1>   
     <p>I help creators & businesses automate content using AI.</p>
-    <a class="btn" href="https://wa.me/212675905674">Hire Me</a>
+    <a class="btn" href="https://wa.me/212675905674">🚀 Start Your AI Project/a>
 </div>
 
 <div class="section">
