--- a/index.html
+++ b/index.html
@@ -68,8 +68,38 @@
     </div>
 
 </div>
+<div class="section">
+    <h2>What Clients Say</h2>
 
-<footer>
+    <div class="card">
+        <p>"Salim built an AI system that automated 80% of our content workflow."</p>
+        <strong>- Marketing Agency Owner</strong>
+    </div>
+
+    <div class="card">
+        <p>"Our revenue increased after implementing his AI automation."</p>
+        <strong>- E-commerce Founder</strong>
+    </div>
+</div>
+
+<div class="section">
+    <h2>Pricing</h2>
+
+    <div class="card">
+        <h3>Starter</h3>
+        <p>$299 - Basic AI Setup</p>
+    </div>
+
+    <div class="card">
+        <h3>Pro</h3>
+        <p>$799 - Advanced Automation System</p>
+    </div>
+
+    <div class="card">
+        <h3>Custom</h3>
+        <p>Contact for custom AI solution</p>
+    </div>
+</div><footer>
     © 2026 Salim | AI Automation Expert
 </footer>
 
