--- a/index.html
+++ b/index.html
@@ -4,48 +4,55 @@
     <title>Salim | AI Automation Expert</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background: #0f172a;
-            color: white;
-            text-align: center;
-        }
-        .hero {
-            padding: 80px 20px;
-            background: linear-gradient(135deg,#1e293b,#0f172a);
-        }
-        h1 {
-            font-size: 42px;
-        }
-        .btn {
-            display: inline-block;
-            padding: 12px 25px;
-            margin-top: 20px;
-            background: #00ffcc;
-            color: black;
-            text-decoration: none;
-            border-radius: 25px;
-            font-weight: bold;
-        }
-        .section {
-            padding: 60px 20px;
-        }
-        .card {
-            background: #1e293b;
-            margin: 15px auto;
-            padding: 20px;
-            border-radius: 10px;
-            max-width: 400px;
-        }
-        footer {
-            padding: 20px;
-            background: #111827;
-            font-size: 14px;
-            opacity: 0.6;
-        }
-    </style>
-</head>
+    body {
+        margin: 0;
+        font-family: Arial, sans-serif;
+        background: linear-gradient(135deg, #1e3c72, #2a5298);
+        color: white;
+        text-align: center;
+    }
+    .hero {
+        padding: 100px 20px;
+    }
+    h1 {
+        font-size: 45px;
+    }
+    .btn {
+        display: inline-block;
+        padding: 14px 28px;
+        margin-top: 20px;
+        background: #ffffff;
+        color: #1e3c72;
+        text-decoration: none;
+        border-radius: 30px;
+        font-weight: bold;
+        transition: 0.3s;
+    }
+    .btn:hover {
+        background: #0f172a;
+        transform: scale(1.05);
+    }
+    .section {
+        padding: 70px 20px;
+    }
+    .card {
+        background: rgba(255,255,255,0.15);
+        margin: 20px auto;
+        padding: 25px;
+        border-radius: 15px;
+        max-width: 500px;
+    }
+    img {
+        width: 100%;
+        border-radius: 10px;
+        margin-top: 10px;
+    }
+    footer {
+        padding: 20px;
+        font-size: 14px;
+        opacity: 0.7;
+    }
+</style></head>
 <body>
 
 <div class="hero">
