--- a/index.html
+++ b/index.html
@@ -1,57 +1,126 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Salim | AI Automation Expert</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-    body {
-        margin: 0;
-        font-family: Arial, sans-serif;
-        background: linear-gradient(135deg, #1e3c72, #2a5298);
-        color: white;
-        text-align: center;
-    }
-    .hero {
-        padding: 100px 20px;
-    }
-    h1 {
-        font-size: 45px;
-    }
-    .btn {
-        display: inline-block;
-        padding: 14px 28px;
-        margin-top: 20px;
-        background: #ffffff;
-        color: #1e3c72;
-        text-decoration: none;
-        border-radius: 30px;
-        font-weight: bold;
-        transition: 0.3s;
-    }
-    .btn:hover {
-        background: #0f172a;
-        transform: scale(1.05);
-    }
-    .section {
-        padding: 70px 20px;
-    }
-    .card {
-        background: rgba(255,255,255,0.15);
-        margin: 20px auto;
-        padding: 25px;
-        border-radius: 15px;
-        max-width: 500px;
-    }
-    img {
-        width: 100%;
-        border-radius: 10px;
-        margin-top: 10px;
-    }
-    footer {
-        padding: 20px;
-        font-size: 14px;
-        opacity: 0.7;
-/* Animation */
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Salim | AI Automation Agency</title>
+
+<!-- Google Font -->
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600;800&display=swap" rel="stylesheet">
+
+<style>
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+
+body {
+    overflow-x: hidden;
+    color: white;
+}
+
+/* VIDEO BACKGROUND */
+#bg-video {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+    object-fit: cover;
+    z-index: -3;
+}
+
+/* DARK OVERLAY */
+.overlay {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.6);
+    z-index: -2;
+}
+
+/* PARTICLES */
+#particles-js {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+
+/* HERO */
+.hero {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 20px;
+}
+
+.glass {
+    background: rgba(255,255,255,0.1);
+    backdrop-filter: blur(15px);
+    padding: 50px;
+    border-radius: 20px;
+    border: 1px solid rgba(255,255,255,0.2);
+    animation: fadeUp 1.5s ease;
+}
+
+h1 {
+    font-size: 50px;
+    font-weight: 800;
+}
+
+p {
+    margin-top: 15px;
+    opacity: 0.8;
+}
+
+.btn {
+    display: inline-block;
+    margin-top: 25px;
+    padding: 14px 35px;
+    border-radius: 30px;
+    background: #00ffe0;
+    color: black;
+    text-decoration: none;
+    font-weight: 600;
+    transition: 0.3s;
+}
+
+.btn:hover {
+    transform: scale(1.08);
+    background: white;
+}
+
+/* SECTION */
+.section {
+    padding: 100px 20px;
+    text-align: center;
+}
+
+.projects {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
+    gap: 30px;
+    max-width: 1200px;
+    margin: auto;
+}
+
+.card {
+    background: rgba(255,255,255,0.08);
+    backdrop-filter: blur(12px);
+    padding: 30px;
+    border-radius: 20px;
+    border: 1px solid rgba(255,255,255,0.15);
+    transition: 0.4s;
+}
+
+.card:hover {
+    transform: translateY(-10px);
+}
 
 @keyframes fadeUp {
     from {
@@ -64,90 +133,75 @@
     }
 }
 
-.hero {
-    animation: fadeUp 1s ease forwards;
+footer {
+    padding: 40px;
+    text-align: center;
+    opacity: 0.6;
 }
+</style>
+</head>
 
-.card {
-    opacity: 0;
-    animation: fadeUp 1s ease forwards;
-}
-
-.card:nth-child(1) { animation-delay: 0.3s; }
-.card:nth-child(2) { animation-delay: 0.6s; }
-.card:nth-child(3) { animation-delay: 0.9s; }
-
-html {
-    scroll-behavior: smooth;
-}}
-</style></head>
 <body>
 
-<div class="hero">
-    <h1>I Help Businesses Make Money Using AI Automation</h1>   
-    <p>I help creators & businesses automate content using AI.</p>
-    <a class="btn" href="https://wa.me/212675905674">🚀 Start Your AI Project/a>
+<!-- VIDEO AI BACKGROUND -->
+<video autoplay muted loop id="bg-video">
+<source src="https://cdn.coverr.co/videos/coverr-artificial-intelligence-technology-9713/1080p.mp4" type="video/mp4">
+</video>
+
+<div class="overlay"></div>
+<div id="particles-js"></div>
+
+<!-- HERO -->
+<section class="hero">
+<div class="glass">
+<h1>I Build AI Automation Systems</h1>
+<p>Helping businesses scale using Artificial Intelligence.</p>
+<a href="#" class="btn">🚀 Start Your AI Project</a>
+</div>
+</section>
+
+<!-- PROJECTS -->
+<section class="section">
+<h2>My AI Projects</h2>
+<br><br>
+
+<div class="projects">
+
+<div class="card">
+<h3>AI Instagram Automation</h3>
+<p>Auto generate posts, captions and scheduling system.</p>
 </div>
 
-<div class="section">
-    <h2>My Projects</h2>
-
-    <div class="projects">
-
-        <div class="card">
-            <h3>Instagram AI Auto Poster</h3>
-            <p>Generates captions, designs posts and schedules automatically.</p>
-            <img src="https://images.unsplash.com/photo-1677442136019-21780ecad995">
-        </div>
-
-        <div class="card">
-            <h3>YouTube Script Generator</h3>
-            <p>AI tool that creates viral scripts in seconds.</p>
-            <img src="https://images.unsplash.com/photo-1518779578993-ec3579fee39f">
-        </div>
-
-        <div class="card">
-            <h3>E-commerce AI Chatbot</h3>
-            <p>Automated chatbot that increases sales and handles support.</p>
-            <img src="https://images.unsplash.com/photo-1531746790731-6c087fecd65a">
-        </div>
-
-    </div>
-</div></div>
-<div class="section">
-    <h2>What Clients Say</h2>
-
-    <div class="card">
-        <p>"Salim built an AI system that automated 80% of our content workflow."</p>
-        <strong>- Marketing Agency Owner</strong>
-    </div>
-
-    <div class="card">
-        <p>"Our revenue increased after implementing his AI automation."</p>
-        <strong>- E-commerce Founder</strong>
-    </div>
+<div class="card">
+<h3>YouTube Script AI</h3>
+<p>Creates viral scripts using advanced AI prompts.</p>
 </div>
 
-<div class="section">
-    <h2>Pricing</h2>
+<div class="card">
+<h3>Ecommerce AI Chatbot</h3>
+<p>Boost sales with automated AI customer support.</p>
+</div>
 
-    <div class="card">
-        <h3>Starter</h3>
-        <p>$299 - Basic AI Setup</p>
-    </div>
+</div>
+</section>
 
-    <div class="card">
-        <h3>Pro</h3>
-        <p>$799 - Advanced Automation System</p>
-    </div>
-
-    <div class="card">
-        <h3>Custom</h3>
-        <p>Contact for custom AI solution</p>
-    </div>
-</div><footer>
-    © 2026 Salim | AI Automation Expert
+<footer>
+© 2026 Salim | AI Automation Agency
 </footer>
+
+<!-- PARTICLES SCRIPT -->
+<script src="https://cdn.jsdelivr.net/npm/particles.js"></script>
+<script>
+particlesJS("particles-js", {
+  particles: {
+    number: { value: 80 },
+    size: { value: 3 },
+    color: { value: "#00ffe0" },
+    line_linked: { enable: true, color: "#00ffe0" },
+    move: { speed: 2 }
+  }
+});
+</script>
 
 </body>
 </html>
