--- a/index.html
+++ b/index.html
@@ -3,147 +3,144 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Salim | AI Automation Agency</title>
+<title>Salim | Ultra AI Agency</title>
 
-<!-- Google Font -->
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600;800&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700;900&display=swap" rel="stylesheet">
 
 <style>
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-}
+*{margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif;scroll-behavior:smooth;}
+body{color:white;overflow-x:hidden}
 
-body {
-    overflow-x: hidden;
-    color: white;
+/* NAVBAR */
+nav{
+position:fixed;
+width:100%;
+padding:20px 50px;
+display:flex;
+justify-content:space-between;
+align-items:center;
+background:rgba(0,0,0,0.4);
+backdrop-filter:blur(10px);
+z-index:10;
 }
-
-/* VIDEO BACKGROUND */
-#bg-video {
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    min-width: 100%;
-    min-height: 100%;
-    object-fit: cover;
-    z-index: -3;
+nav a{
+color:white;
+text-decoration:none;
+margin-left:25px;
+font-weight:500;
+transition:0.3s;
 }
+nav a:hover{color:#00ffe0}
 
-/* DARK OVERLAY */
-.overlay {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    background: rgba(0,0,0,0.6);
-    z-index: -2;
+/* VIDEO */
+#bg-video{
+position:fixed;
+right:0;bottom:0;
+min-width:100%;min-height:100%;
+object-fit:cover;
+z-index:-3;
 }
-
-/* PARTICLES */
-#particles-js {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
+.overlay{
+position:fixed;width:100%;height:100%;
+background:rgba(0,0,0,0.7);
+z-index:-2;
+}
+#particles-js{
+position:fixed;width:100%;height:100%;
+z-index:-1;
 }
 
 /* HERO */
-.hero {
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    padding: 20px;
+.hero{
+height:100vh;
+display:flex;
+justify-content:center;
+align-items:center;
+text-align:center;
+padding:20px;
+}
+.glass{
+background:rgba(255,255,255,0.08);
+backdrop-filter:blur(20px);
+padding:60px;
+border-radius:30px;
+border:1px solid rgba(255,255,255,0.2);
+max-width:850px;
+animation:fadeUp 1.5s ease;
+}
+h1{font-size:55px;font-weight:900}
+.hero p{margin-top:20px;font-size:18px;opacity:0.85}
+.btn{
+display:inline-block;
+margin-top:30px;
+padding:15px 40px;
+border-radius:40px;
+background:#00ffe0;
+color:black;
+text-decoration:none;
+font-weight:700;
+transition:0.3s;
+}
+.btn:hover{transform:scale(1.1);background:white}
+
+/* SECTIONS */
+.section{padding:120px 20px;text-align:center}
+.section h2{font-size:40px;margin-bottom:60px}
+
+.projects, .pricing{
+display:grid;
+grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
+gap:30px;
+max-width:1200px;
+margin:auto;
 }
 
-.glass {
-    background: rgba(255,255,255,0.1);
-    backdrop-filter: blur(15px);
-    padding: 50px;
-    border-radius: 20px;
-    border: 1px solid rgba(255,255,255,0.2);
-    animation: fadeUp 1.5s ease;
+.card, .price-card{
+background:rgba(255,255,255,0.07);
+backdrop-filter:blur(15px);
+padding:35px;
+border-radius:25px;
+border:1px solid rgba(255,255,255,0.15);
+transition:0.4s;
+opacity:0;
+transform:translateY(40px);
+}
+.card.show, .price-card.show{
+opacity:1;
+transform:translateY(0);
+}
+.card:hover, .price-card:hover{
+transform:translateY(-10px);
 }
 
-h1 {
-    font-size: 50px;
-    font-weight: 800;
+.price-card h2{margin-top:15px;font-size:32px;color:#00ffe0}
+
+footer{
+padding:50px;
+text-align:center;
+background:rgba(0,0,0,0.6);
+backdrop-filter:blur(10px);
 }
 
-p {
-    margin-top: 15px;
-    opacity: 0.8;
-}
-
-.btn {
-    display: inline-block;
-    margin-top: 25px;
-    padding: 14px 35px;
-    border-radius: 30px;
-    background: #00ffe0;
-    color: black;
-    text-decoration: none;
-    font-weight: 600;
-    transition: 0.3s;
-}
-
-.btn:hover {
-    transform: scale(1.08);
-    background: white;
-}
-
-/* SECTION */
-.section {
-    padding: 100px 20px;
-    text-align: center;
-}
-
-.projects {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
-    gap: 30px;
-    max-width: 1200px;
-    margin: auto;
-}
-
-.card {
-    background: rgba(255,255,255,0.08);
-    backdrop-filter: blur(12px);
-    padding: 30px;
-    border-radius: 20px;
-    border: 1px solid rgba(255,255,255,0.15);
-    transition: 0.4s;
-}
-
-.card:hover {
-    transform: translateY(-10px);
-}
-
-@keyframes fadeUp {
-    from {
-        opacity: 0;
-        transform: translateY(40px);
-    }
-    to {
-        opacity: 1;
-        transform: translateY(0);
-    }
-}
-
-footer {
-    padding: 40px;
-    text-align: center;
-    opacity: 0.6;
+@keyframes fadeUp{
+from{opacity:0;transform:translateY(50px);}
+to{opacity:1;transform:translateY(0);}
 }
 </style>
 </head>
 
 <body>
 
-<!-- VIDEO AI BACKGROUND -->
+<nav>
+<div><strong>Salim AI</strong></div>
+<div>
+<a href="#projects">Projects</a>
+<a href="#pricing">Pricing</a>
+<a href="tel:0675905674">Call</a>
+<a href="https://instagram.com/1xa-slm">Instagram</a>
+</div>
+</nav>
+
 <video autoplay muted loop id="bg-video">
 <source src="https://cdn.coverr.co/videos/coverr-artificial-intelligence-technology-9713/1080p.mp4" type="video/mp4">
 </video>
@@ -151,55 +148,95 @@ footer {
 <div class="overlay"></div>
 <div id="particles-js"></div>
 
-<!-- HERO -->
 <section class="hero">
 <div class="glass">
-<h1>I Build AI Automation Systems</h1>
-<p>Helping businesses scale using Artificial Intelligence.</p>
-<a href="#" class="btn">🚀 Start Your AI Project</a>
+<h1>Ultra AI Automation Agency</h1>
+<p>We build powerful AI systems that automate content, videos, sales & portfolios.</p>
+<a href="tel:0675905674" class="btn">🚀 Start Your Project</a>
 </div>
 </section>
 
-<!-- PROJECTS -->
-<section class="section">
-<h2>My AI Projects</h2>
-<br><br>
-
+<section class="section" id="projects">
+<h2>My Projects</h2>
 <div class="projects">
 
 <div class="card">
-<h3>AI Instagram Automation</h3>
-<p>Auto generate posts, captions and scheduling system.</p>
+<h3>AI Content Creator</h3>
+<p>Automated system generating posts, captions & scripts for social media growth.</p>
 </div>
 
 <div class="card">
-<h3>YouTube Script AI</h3>
-<p>Creates viral scripts using advanced AI prompts.</p>
+<h3>Social Media Automation</h3>
+<p>Instagram & TikTok growth automation workflow.</p>
 </div>
 
 <div class="card">
-<h3>Ecommerce AI Chatbot</h3>
-<p>Boost sales with automated AI customer support.</p>
+<h3>AI Video Creator</h3>
+<p>Creates viral short videos using AI voice & visuals.</p>
+</div>
+
+<div class="card">
+<h3>AI Portfolio Builder</h3>
+<p>Custom AI-powered portfolio websites for professionals.</p>
+</div>
+
+</div>
+</section>
+
+<section class="section" id="pricing">
+<h2>Pricing Plans</h2>
+<div class="pricing">
+
+<div class="price-card">
+<h3>Starter</h3>
+<p>Basic AI Setup</p>
+<h2>$299</h2>
+</div>
+
+<div class="price-card">
+<h3>Pro</h3>
+<p>Advanced Automation System</p>
+<h2>$799</h2>
+</div>
+
+<div class="price-card">
+<h3>Ultra</h3>
+<p>Full AI Business System</p>
+<h2>$1500</h2>
 </div>
 
 </div>
 </section>
 
 <footer>
-© 2026 Salim | AI Automation Agency
+© 2026 Salim AI Agency  
+📞 0675905674  
+📸 Instagram: 1xa-slm
 </footer>
 
-<!-- PARTICLES SCRIPT -->
 <script src="https://cdn.jsdelivr.net/npm/particles.js"></script>
 <script>
-particlesJS("particles-js", {
-  particles: {
-    number: { value: 80 },
-    size: { value: 3 },
-    color: { value: "#00ffe0" },
-    line_linked: { enable: true, color: "#00ffe0" },
-    move: { speed: 2 }
-  }
+particlesJS("particles-js",{
+particles:{
+number:{value:100},
+size:{value:3},
+color:{value:"#00ffe0"},
+line_linked:{enable:true,color:"#00ffe0"},
+move:{speed:2}
+}
+});
+
+/* SCROLL ANIMATION */
+const observer=new IntersectionObserver(entries=>{
+entries.forEach(entry=>{
+if(entry.isIntersecting){
+entry.target.classList.add('show');
+}
+});
+},{threshold:0.2});
+
+document.querySelectorAll('.card, .price-card').forEach(el=>{
+observer.observe(el);
 });
 </script>
 
